# zypo-rs

./: .gitignore  LICENSE  README.md
examples/: README.md  dummy_functions.zy  fibbonachi.zy
zypo-cli/: Cargo.toml  README.md
zypo-cli/src/: main.rs
zypo-lib/: Cargo.toml  README.md
zypo-lib/src/: lib.rs
zypo-lib/src/codegen/: mod.rs
zypo-lib/src/parser/: ast.rs  grammar.lalrpop  lib.rs  mod.rs  scope.rs
zypo-lib/tests/: ast_function.rs  ast_while_loop.rs
