[package]
name = "zypo-lib"
description = "Backend library for zypo-rs."
readme = "README.md"
repository = "https://gitlab.com/Owez/zypo-rs"
license = "MIT"
version = "0.0.2"
authors = ["Owez <owez@scalist.net>"]
edition = "2018"

[build-dependencies]
lalrpop = "0.17.2"

[dependencies]
lalrpop-util = "0.17.2"
regex = "1.3.1"
