[package]
name = "zypo-lib"
description = "`zypo-lib` is the backend library of the Zypo languages and contains the guts of the compiler."
readme = "README.md"
repository = "https://gitlab.com/Owez/zypo-rs"
license = "MIT"
version = "0.0.3"
authors = ["Owez <owez@scalist.net>"]
edition = "2018"

[build-dependencies]
lalrpop = "0.17.2"

[dependencies]
lalrpop-util = "0.17.2"
regex = "1.3.1"
